--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@
   --Dark-gray: hsl(0, 0%, 59%);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* Attribution */
 .attribution {
   font-size: 11px;
