--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: var(--Dark-cyan);
+}
+
 /* Attribution */
 .attribution {
   font-size: 11px;
