--- a/styles.css
+++ b/styles.css
@@ -18,15 +18,20 @@ body {
 }
 
 .container {
-  margin: 30% 50% 5% 10%;
+  margin: 30% 0% 0% 6%;
   display: flex;
   flex-direction: column;
   background-color: #f0f0f0;
   align-items: center;
   justify-content: center;
-  width: 80%;
-  height: 60vh;
+  width: 85%;
+  height: 55vh;
   border-radius: 10px;
+}
+.top img {
+  width: 100%;
+  padding-top: -60px;
+  border-radius: 10px 10px 0 0;
 }
 
 .prof-img img {
