--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,11 @@ body {
   height: 55vh;
   border-radius: 10px;
 }
+
 .top img {
   width: 100%;
-  padding-top: -60px;
+  height: 22vh;
+  margin-top: -70px;
   border-radius: 10px 10px 0 0;
 }
 
