--- a/styles.css
+++ b/styles.css
@@ -14,33 +14,87 @@
 }
 
 body {
+  background: url(./images/bg-pattern-top.svg),
+    url(./images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat;
+  background-position: right 50vw bottom 40vh, left 50vw top 45vh;
   background-color: var(--Dark-cyan);
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
+
 .container {
-  margin: 30% 0% 0% 6%;
   display: flex;
   flex-direction: column;
   background-color: #f0f0f0;
   align-items: center;
   justify-content: center;
-  width: 85%;
-  height: 55vh;
+  max-width: 100vh;
   border-radius: 10px;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
 .top img {
-  width: 100%;
-  height: 22vh;
-  margin-top: -70px;
   border-radius: 10px 10px 0 0;
+  width: 24.3rem;
+  max-width: 100vh;
 }
 
 .prof-img img {
   border-radius: 50%;
   border-style: solid;
   border-color: white;
+  position: relative;
+  top: -50px;
+  left: 20px;
 }
+
+h3 {
+  line-height: 1.6;
+  color: var(--Very-dark-desaturated-blue);
+  margin-top: -45px;
+}
+
+h3 span {
+  color: var(--Dark-gray);
+  font-weight: lighter;
+  font-size: 15px;
+  padding: 0 4px;
+}
+
+p {
+  text-align: center;
+  color: var(--Dark-gray);
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+hr {
+  width: 99%;
+  color: var(--Dark-gray);
+}
+
+th {
+  color: var(--Very-dark-desaturated-blue);
+  padding: 15px 40px 3px 15px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+td {
+  color: var(--Dark-gray);
+  padding: 0 15px 15px;
+}
+
+td:nth-child(2) {
+  padding-right: 20px;
+}
+
 /* Attribution */
 .attribution {
   font-size: 11px;
